--- a/Shophoto/Shophoto/Views/Projects/Project/Project.xaml
+++ b/Shophoto/Shophoto/Views/Projects/Project/Project.xaml
@@ -12,28 +12,45 @@
         <Border BorderBrush="{StaticResource SelectedBlue}" BorderThickness="2,0,0,0">
             <StackPanel Orientation="Horizontal">
                 <StackPanel HorizontalAlignment="Left" Background="White" Width="190">
-                    <buttons:IconButton HorizontalAlignment="Left" Width="40" Height="40" 
-                                        Margin="10,10,0,0"
+                    <StackPanel Orientation="Horizontal" Margin="0,40,0,0">
+                        <buttons:IconButton HorizontalAlignment="Left" Width="40" Height="40" 
+                                        Margin="0,15,0,0"
                                         Icon="{iconPacks:Octicons Kind=ChevronLeft}"
                                         Template="{StaticResource IconButtonTemplate}"
                                         Style="{StaticResource IconButtonHoverStyle}"
                                         BorderBrush="Transparent"
                                         Command="{Binding GoBackClickCommand}"></buttons:IconButton>
-                    <Viewbox StretchDirection="DownOnly">
-                        <TextBlock Margin="10,20,10,0" Height="40" Background="Transparent"
+                        
+                    </StackPanel>
+                    <Viewbox StretchDirection="DownOnly" HorizontalAlignment="Left">
+                        <TextBlock Margin="10,0,10,0" Height="40" Background="Transparent"
                        TextAlignment="Left"
                        FontSize="25" Text="{Binding Name, FallbackValue=First Project}"></TextBlock>
                     </Viewbox>
 
-                    <TextBlock Margin="20,10,20,10" FontSize="15" TextAlignment="Left" Text="Info:"></TextBlock>
-                    <TextBlock Margin="20,0,20,10" FontSize="10" TextAlignment="Left" 
+                    <TextBlock Margin="10,10,20,10" FontSize="18" TextAlignment="Left" Text="Info:"></TextBlock>
+                    <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled" MaxHeight="200">
+                        <TextBlock Margin="20,0,20,10" FontSize="15" TextAlignment="Left" 
                        TextWrapping="Wrap" Opacity=".8"
-                       FontStyle="Italic"
+                       FontStyle="Italic" 
                        Text="{Binding Summary, FallbackValue=thskdnldndlfdf dfddfdfdf sdsdsf df df}"></TextBlock>
-                    <TextBlock Margin="20,10,20,10" FontSize="15" TextAlignment="Left" Text="Customer Name:"></TextBlock>
-                    <TextBlock Margin="20,0,20,0" FontSize="10" TextAlignment="Left" Text="{Binding CustomerName}"></TextBlock>
-                    <TextBlock Margin="20,10,20,10" FontSize="15" TextAlignment="Left" Text="Customer Email:"></TextBlock>
-                    <TextBlock Margin="20,0,20,0" FontSize="10" TextAlignment="Left" Text="{Binding CustomerEmail}"></TextBlock>
+                    </ScrollViewer>
+                    
+                    <TextBlock Margin="10,10,20,10" FontSize="18" TextAlignment="Left" Text="Customer Name:"></TextBlock>
+                    <TextBlock Margin="20,0,20,0" FontSize="15" TextAlignment="Left" Text="{Binding CustomerName}"></TextBlock>
+                    <TextBlock Margin="10,10,20,10" FontSize="18" TextAlignment="Left" Text="Customer Email:"></TextBlock>
+                    <TextBlock Margin="20,0,20,0" FontSize="15" TextAlignment="Left" Text="{Binding CustomerEmail}"></TextBlock>
+
+                    <buttons:IconButton Width="110"
+                                        HorizontalAlignment="Left"
+                                        Template="{StaticResource IconButtonTemplate}"
+                                        Style="{StaticResource IconButtonBlueHoverStyle}"
+                                        Margin="10,50,0,0" Height="30" >
+                        <Grid>
+                            <iconPacks:PackIconModern Margin="-5,0,0,0" Kind="Share"></iconPacks:PackIconModern>
+                            <TextBlock Margin="15,0,0,0">Share Project</TextBlock>
+                        </Grid>
+                    </buttons:IconButton>
                 </StackPanel>
                 <collections:Collections DataContext="{Binding CollectionsVM}"></collections:Collections>
             </StackPanel>
