--- a/Shophoto/Shophoto/Views/Collections/AuxView/TagImageDialog.xaml
+++ b/Shophoto/Shophoto/Views/Collections/AuxView/TagImageDialog.xaml
@@ -56,7 +56,8 @@
                                 Margin="0,0,0,2"></TextBlock>
                         <ListView Height="100" Width="350" 
                                 BorderBrush="Transparent"
-                                ItemsSource="{Binding Tags}">
+                                ItemsSource="{Binding Tags}"
+                                  ItemContainerStyle="{StaticResource ListViewItemStyle}">
                             <ListView.ItemTemplate>
                                 <DataTemplate>
                                     <Grid Height="30" Margin="4">
